--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-auth.js"></script>
 
+<script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-firestore.js"></script>
   <!-- Your Firebase Config -->
   <script src="firebase-config.js"></script>
 
