--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required>
         <br>
-        <button type="button" onclick="signUp()">Sign Up</button>
+        <button type="submit" onclick="signUp()">Sign Up</button>
       </form>
     </div>
 
@@ -36,7 +36,7 @@
         <label for="loginPassword">Password:</label>
         <input type="password" id="loginPassword" required>
         <br>
-        <button type="button" onclick="login()">Login</button>
+        <button type="submit" onclick="login()">Login</button>
       </form>
     </div>
 
